tests/invalid/transitive_import.err_exp
transitive_import.m:021: In declaration of function
transitive_import.m:021:   `transitive_import.assoc_list_first'/3:
transitive_import.m:021:   error: undefined type `std_util.pair'/2.
transitive_import.m:021:   (The module `std_util' has not been imported.)
transitive_import.m:028: In declaration of instance of typeclass `enum.enum'/1:
transitive_import.m:028:   error: undefined typeclass `enum.enum'/1.
transitive_import.m:028:   (The module `enum' has not been imported.)
